<resources>
    <string name="version_app">Version 2.0.36</string>
    <string name="app_name">YesLap!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="create_account">Don\'t have an account? create an account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="fill_email">Fill in the E-mail field</string>
    <string name="fill_password">Fill in the Password field</string>
    <string name="retype_password">Retype Password</string>
    <string name="have_account">I have an account! Sign in</string>
    <string name="password_not_match">passwords don\'t match</string>
    <string name="insert_email">Insert your E-mail</string>
    <string name="remember_password">I remember my password, back to Sign in!</string>
    <string name="loading">Loading</string>
    <string name="loading_msg">Wait while we check yours credentials!</string>
    <string name="username">Username</string>
    <string name="text_input_error_message">Please, insert a Username!</string>
    <string name="select_image">Select a Image</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="uploading_image_msg">Please, wait while we upload your image</string>
    <string name="image_uploaded">Image Uploaded</string>
    <string name="error_upload">Error in Upload</string>
    <string name="account_created">Account Created Successfully!</string>
    <string name="password_resend">The instructions of password recovery was sended for your e-mail!</string>
    <string name="username_changed">Username Changed Successfully!</string>
    <string name="click_red_button">Click at the red button to enable</string>
    <string name="msg_change_picture">Click here to change your picture</string>
    <string name="change_username">Change your username</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="logout">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="legal" translatable="false">LEGAL</string>
    <string name="licenses">Licenses</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="view_profile">View Profile</string>
    <string name="chat">Chat</string>
    <string name="addeedd_favorite">Favorite Addeedd</string>
    <string name="report_one">Does this profile appear to be fake</string>
    <string name="report_two">This profile appears to be under 18 years old</string>
    <string name="report_three">Report abuse of this Person</string>
    <string name="report_four">I want to block this person</string>
    <string name="send_a_message_about_this_person">Send a message about this person</string>
    <string name="change_your_username">Change Your Username</string>
    <string name="are_you_already_here">Are you already here!</string>
    <string name="please_change_image_username">Please, change your username and add a profile photo to look for someone!</string>
    <string name="enter_a_messege_to_send">Enter a message to send</string>
    <string name="error_send_message">Error sending message</string>
    <string name="error_saving_conversation">Error saving conversation</string>
    <string name="insert_username">Please, insert a Username!</string>
    <string name="select_option_to_send_message">Please, select a option to send your report!</string>
    <string name="report_sended">Report Sended!</string>
    <string name="welcome_yeslap">Welcome to YesLap!</string>
    <string name="click_edit_profile">Click here to edit your profile</string>
    <string name="chat_messages">Chat Messages</string>
    <string name="chat_messages_mgs">Here you can see your chat messages</string>
    <string name="appointment_book">Appointment Book</string>
    <string name="appointment_book_msg">Here you can change when you are free or busy</string>
    <string name="find_users">Find Users</string>
    <string name="find_users_msg">Here you can find users to chat</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="favorite_users_msg">Here you can see your favorite users</string>
    <string name="settings">Settings</string>
    <string name="settings_msg">Here you can change your settings</string>
    <string name="enjoy_yeslap">Enjoy the YesLap</string>
    <string name="enjoy_yeslap_msg">Now you already know how the app works, enjoy it to the fullest. Sincerely, YesLap Team!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_connection_msg">You are offline please check your internet connection and try again</string>
    <string name="weak_password">Enter a stronger password, containing numbers and letters</string>
    <string name="invalid_credential">Invalid E-mail</string>
    <string name="email_used">This email is already being used</string>
    <string name="change_image">Change Image</string>
    <string name="save">Save</string>
    <string name="select_image_to_your_profile">Select a image to your profile</string>
    <string name="cancels">Cancel</string>
    <string name="username_already_used">This username is already being used</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose">Choose</string>
    <string name="send">Send</string>
    <string name="fill_username_field">Fill in the Username Field</string>
    <string name="warning">Warning</string>
    <string name="warning_msg">The YesLap! is in the development phase, so that we can improve our application more and more, sometimes the accounts of our database will be excluded, we are currently in the test phase, okay?</string>
    <string name="iagree">I Agree</string>
    <string name="soon">Soon</string>
    <string name="update_avaliable">Update Avaliable</string>
    <string name="update_avaliable_msg">Hello, we have something new for you! YesLap has a new version ready for you to upgrade.</string>
    <string name="update">Update Now</string>
    <string name="permission_dinied">Permission Denied</string>
    <string name="sending_image">Please wait while we update your profile picture</string>
    <string name="permission_granted">Permissions Granted!</string>
    <string name="permission_need_be_granted">All Permissions Need To Be Granted!</string>
    <string name="user_location">Location</string>
    <string name="pass" translatable="false">* * * * * * * *</string>
    <string name="terms_of_services">Terms Of Services</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="favorite_removed">Favorite Removed</string>
    <string name="delete">Delete</string>
    <string name="delete_favorite_msg">Are you sure you want to delete this favorite?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="you_still_have_not_talked_say_hello">You still have not talked \n Say Hello</string>
    <string name="favorites">Favorites</string>
    <string name="new_username_msg">Enter your new username</string>
    <string name="username_must_have_only">Your username must have only characters of a-z or A-Z</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gay">Gay</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="chat_removed">Chat Removed</string>
    <string name="delete_chat_msg">Are you sure you want to delete this chat?</string>
    <string name="soon_this_new_feature">Soon this new feature</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_msg">Do you want to reset your password? We will email you with a link to reset your password</string>
    <string name="email_sent">E-mail Sent</string>
    <string name="current_email">Current E-mail</string>
    <string name="current_password">Current Password</string>
    <string name="new_email">New E-mail</string>
    <string name="update_email">Update E-mail</string>
    <string name="fill_current_email">Fill in your current E-mail</string>
    <string name="fill_your_password">fill in your Password</string>
    <string name="fill_new_email">fill in your New E-mail</string>
    <string name="email_changed">You E-mail has been changed!</string>
    <string name="change_email">Change E-mail</string>
    <string name="email_equal_new">New email just like your current one</string>
    <string name="valid_email">Enter a valid email address</string>
    <string name="password_size_msg">Enter a password longer than 6 characters</string>
    <string name="error_signup">Excuse me! An unexpected error has occurred!</string>
    <string name="email_or_password_incorrect">Email or password are incorrect</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="fill_new_password">Enter a your New E-mail</string>
    <string name="changed_password">Your E-mail has been changed!</string>
    <string name="already_exist_favorite">This user is already on your list of favorite users</string>
    <string name="msg_report">Enter any comments to report this user</string>
    <string name="choose_partner_gender">Choose the partner\'s gender</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="no_partner_available">No partner available for you right now, please try again later!</string>
    <string name="no_have_favorites">You haven\'t any favorites yet!</string>
    <string name="gps_off">GPS OFF</string>
    <string name="gps_off_msg">You need to call your location so we can find you.</string>
    <string name="turn_on">Turn On</string>
    <string name="select_genre">Go into settings and select your genre.</string>
    <string name="select_yout_age">Go into settings and select your age.</string>
    <string name="select_genre_search">Go into settings and select the genre you want to search.</string>
    <string name="select_age_search">Go into settings and select the age of the person you want to search.</string>
    <string name="select_distance">Go to Settings and choose the distance you want to find someone</string>
    <string name="username_more_6_char">Your username must be longer than 6 characters</string>
</resources>
