<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.sendlook.yeslap.FavoritesActivity">

    <ImageView
        android:id="@+id/btnGoToProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30sp"
        android:layout_marginTop="15sp"
        android:src="@drawable/gotoprofile" />

    <ImageView
        android:id="@+id/btnGoToSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="15sp"
        android:src="@drawable/gotosetting" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_below="@+id/btnGoToSettings"
        android:layout_centerHorizontal="true"
        android:src="@drawable/maskphotoprofileprincipal" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cvImageUser"
        android:layout_width="65sp"
        android:layout_height="65sp"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:src="@drawable/img_profile" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_below="@id/cvImageUser"
        android:layout_width="wrap_content"
        android:layout_marginTop="5sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/username"/>

    <RadioGroup
        android:layout_below="@id/tvUsername"
        android:layout_width="320sp"
        android:layout_marginTop="5sp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:id="@+id/rgOptions">

        <RadioButton
            android:id="@+id/rbOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/report_one" />

        <RadioButton
            android:id="@+id/rbTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/report_two" />

        <RadioButton
            android:id="@+id/rbThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_three"/>

        <RadioButton
            android:id="@+id/rbFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/report_four" />

    </RadioGroup>

    <EditText
        android:id="@+id/etMsgReport"
        android:layout_width="250sp"
        android:layout_height="120sp"
        android:hint="@string/send_a_message_about_this_person"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:background="@drawable/input_outline_chat"
        android:layout_below="@+id/rgOptions"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMsgReport"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:background="@drawable/input_outline_button_blue"
        android:text="@string/send"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/wavebottom" />

</RelativeLayout>
