<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgblue"
    tools:context="com.sendlook.yeslap.MainActivity">

    <ImageView
        android:id="@+id/ivWaveTop"
        android:layout_width="match_parent"
        android:layout_marginTop="-4sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:src="@drawable/bgwavetop" />

    <ImageView
        android:id="@+id/ivLogoYesLap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivWaveTop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logoyeslap" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogoYesLap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_outline_line"
        android:drawableEnd="@drawable/iconmailwhite"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/etPassword"
        android:drawableEnd="@drawable/iconlockwhite"
        android:drawablePadding="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etEmail"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_outline_line"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColorHint="@android:color/white" />

    <ImageView
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:src="@drawable/icongo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:padding="5sp"
        android:textAlignment="center"
        android:background="@color/colorTextViewOrange"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
