<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relChat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="br.sendlook.yeslap.controller.ChatActivity">

    <ImageView
        android:id="@+id/btnGoToProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30sp"
        android:layout_marginTop="15sp"
        android:src="@drawable/gotoprofile" />

    <ImageView
        android:id="@+id/btnGoToSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="30sp"
        android:src="@drawable/gotosetting" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cvImageUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp"
        android:text="@string/username"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorLightBlue"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvChat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lnChat"
        android:layout_below="@id/btnGoToProfile"
        android:divider="@android:color/white"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:padding="5sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/wavebottom" />

    <LinearLayout
        android:id="@+id/lnChat"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/input_outline_chat"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="4"
            android:background="@drawable/input_outline_chat"
            android:hint="@string/enter_your_message"
            android:padding="10sp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/btnSendMessage"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginTop="7sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:src="@drawable/sendbutton" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorLightBlue" />

    <TextView
        android:id="@+id/tvNoMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/you_still_have_not_talked_say_hello"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>
